Fix for button color on mobile

--- a/src/components/ContactForm/styles.module.scss
+++ b/src/components/ContactForm/styles.module.scss
@@ -35,6 +35,7 @@
 
 .container button {
   background: white;
+  color: black;
   padding: 1rem;
   padding-left: 2rem;
   padding-right: 2rem;
