--- a/src/components/Projects/styles.module.scss
+++ b/src/components/Projects/styles.module.scss
@@ -59,6 +59,7 @@
 }
 
 .overlay button {
+  color: black;
   background: white;
   padding: 1rem;
   padding-left: 2rem;
